# playwright-pytest-atlas

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
config/: settings.py
framework/: __init__.py
framework/api/: __init__.py  auth_client.py  base_client.py  example_client.py
framework/auth/: __init__.py  otp.py  token_cache.py
framework/components/: __init__.py  base_component.py
framework/data/: __init__.py  factories.py  models.py
framework/pages/: __init__.py  base_page.py  example_page.py  login_page.py
framework/utils/: __init__.py  assertions.py  logger.py
tests/: conftest.py
tests/api/: conftest.py  test_example_api.py
tests/e2e/: test_example_e2e.py
tests/ui/: conftest.py  test_example_ui.py
